fix spacing for monster

--- a/app/styles/base/_helpers.scss
+++ b/app/styles/base/_helpers.scss
@@ -12,7 +12,6 @@
   padding: 25px;
   background-color: #ebebeb;
   margin: 10px;
-  height: 1200px;
   .button-container{
     width: 100%;
     height: 40px;
@@ -44,9 +43,8 @@
 
 .parts-container{
   position: relative;
-  border: 1px solid red;
-  height: 500px;
   width: 350px;
+  height: 350px;
 }
 
 .hidden{
